# microcosting_healthservices

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .vale.ini  .zenodo.json  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  TODO.md  mypy.ini  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  ty.toml
.github/: CODEOWNERS  dependency-review-config.yml  release-drafter.yml
.github/scripts/: validate_mcp_package_artifacts.py  validate_release_metadata.py
.github/workflows/: codeql.yml  conda-recipe.yml  docs-site.yml  power-platform-alm.yml  pr-ci.yml  publish-mcp-registry.yml  publish.yml  release-drafter.yml  release.yml  slow-validation-reusable.yml  slow-validation.yml
archive/: nwau25_calculator_for_acute_activity.xlsb
bindings/dotnet/: DotNetBinding.csproj  README.md
bindings/go/: README.md  go.mod
bindings/jvm/: README.md  build.gradle.kts  settings.gradle.kts
bindings/kotlin-native/: README.md
conda/recipe/: meta.yaml
conductor/: active-workstreams.md  csharp-architecture.md  data-governance.md  downstream-packaging-plans.md  expert-panel-priority-map.md  ihacpa-archive-matrix.md  ihacpa-tool-coverage-matrix.md  index.md  power-platform-boundary.md  product-guidelines.md  product.md  public-api-contract.md  public-readiness.md  reference-generation.md  release-policy.md  roadmap-governance.md  source-archive.md  streamlit-delivery.md  subagent-orchestration.md  supply-chain-controls.md  tech-stack.md  tracks.md  validation-vocabulary.md  web-architecture.md  workflow.md
conductor/templates/: review-template.md
contracts/abstraction-doctrine-enforcement/: README.md  abstraction-doctrine-enforcement.contract.json  abstraction-doctrine-enforcement.schema.json
contracts/ar-drg-icd-mapping-registry/: README.md  ar-drg-icd-mapping-registry.contract.json  ar-drg-icd-mapping-registry.schema.json
contracts/ar-drg-version-parity-fixtures/: README.md  ar-drg-version-parity-fixtures.contract.json  ar-drg-version-parity-fixtures.schema.json
contracts/canonical/: calculator.schema.json  index.md
contracts/coding-set-registry/: README.md  coding-set-registry.contract.json  coding-set-registry.schema.json
contracts/csharp-dotnet-binding/: README.md  csharp-dotnet-binding.contract.json  csharp-dotnet-binding.schema.json
contracts/emergency-classification-parity-fixtures/: README.md  emergency-classification-parity-fixtures.contract.json  emergency-classification-parity-fixtures.schema.json
contracts/emergency-code-mapping-pipeline/: README.md  emergency-code-mapping-pipeline.contract.json  emergency-code-mapping-pipeline.schema.json
contracts/emergency-grouper-integration/: README.md  emergency-grouper-integration.contract.json  emergency-grouper-integration.schema.json
contracts/emergency-udg-aecc-transition-registry/: README.md  emergency-udg-aecc-transition-registry.contract.json  emergency-udg-aecc-transition-registry.schema.json
contracts/formula-parameter-bundle/: README.md  formula-parameter-bundle.contract.json  formula-parameter-bundle.schema.json
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
examples/: run_acute.py
julia-binding/: Project.toml  README.md
nwau_py/: README.md  __init__.py  abstraction_doctrine.py  ar_drg_grouper.py  ar_drg_mapping_registry.py  ar_drg_mapping_registry_data.py  ar_drg_version_parity_fixtures.py  ar_drg_version_parity_fixtures_data.py  bundles.py  classification_matrix.py  classification_validation.py  classification_validators.py  coding_set_registry.py  coding_set_registry_data.py  contracts.py  emergency_classification_parity_fixtures.py  emergency_classification_parity_fixtures_data.py  emergency_code_mapping_pipeline.py  emergency_grouper.py  emergency_transition_registry.py  fixtures.py  formula_parameter_bundle.py  licensed_product_workflow.py  licensed_product_workflow_data.py  mcp_http_server.py  mcp_server.py  pricing_constants.py  pricing_year_diff.py  pricing_year_validation.py  provenance.py  reference_data.py  reference_manifest.py  runtime.py  rust_bridge.py  source_scanner.py  utils.py
r-binding/: DESCRIPTION  NAMESPACE  README.md
r-binding/R/: nwau.R
rust/: Cargo.toml  README.md
rust/crates/nwau-py/: Cargo.toml  pyproject.toml
rust/crates/nwau-py/src/: lib.rs
scripts/: archive_ihacpa_sources.py  bootstrap-power-platform-alm-checks.md  bootstrap-power-platform-alm.sh  bootstrap-power-platform-powerbi-cli.sh  extract_weights.py  smoke_mcp_container.py  validate_historical_ihacpa_inventory.py
src/: funding_calculator.py
tests/: test_abstraction_doctrine_enforcement_track.py  test_acute.py  test_adjust.py  test_ahpcs_model.py  test_ahr.py  test_ar_drg_grouper_integration_track.py  test_ar_drg_icd_mapping_registry_track.py  test_ar_drg_version_parity_fixtures.py  test_ar_drg_version_parity_fixtures_track.py  test_archive_ihacpa_page_parser.py  test_archive_ihacpa_sources.py  test_browser_delivery_boundaries.py  test_bundles.py  test_c_abi_binding_track.py  test_classification_matrix.py  test_classification_validation.py  test_classification_validators.py  test_cli.py  test_cli_file_interop_binding_track.py  test_cli_integration.py  test_coding_set_version_registry.py  test_community_mh_calculator.py  test_community_mh_contract.py  test_community_mh_inventory.py  test_conductor_review_automation.py  test_contract_schema_export.py  test_contracts.py  test_coordination_and_evidence_tracks.py  test_core_contract_surface_tracks.py  test_cost_bucket_registry.py  test_csharp_architecture.py  test_csharp_dotnet_binding_track.py  test_current_calculator_boundary_audit.py  test_docs_release_publication_readiness_track.py  test_docs_site_migration.py  test_docs_site_sota_refresh.py  test_downstream_packaging_plans.py  test_ecosystem_language_readiness_track.py  test_ed.py  test_emergency_classification_parity_fixtures_track.py  (+69 more)
wasm-binding/: README.md  package-lock.json  package.json  tsconfig.json
web/: app.js  index.html  styles.css
(+1823 files in other folders)
