[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nwau_py"
version = "0.2.1"
description = "Utilities for calculating IHACPA National Weighted Activity Units"
authors = [{name="IHACPA"}]
readme = "nwau_py/README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.15"
dependencies = [
    "click",
    "lightgbm",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "polars",
    "pyreadstat",
    "pyxlsb",
]

[dependency-groups]
dev = [
    "ruff",
]
test = [
    "pytest",
]
coverage = [
    "pytest-cov",
]
typing = [
    "ty",
    "pytest",
]
property = [
    "hypothesis",
]
mutation = [
    "mutmut",
]
profiling = [
    "scalene",
]
docs = [
    "vale",
]

[project.scripts]
funding-calculator = "nwau_py.cli.main:cli"

[tool.setuptools.packages.find]
where = [".", "excel_calculator/src"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["archive/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "S", "RUF", "NPY"]
ignore = ["UP042"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "NPY"]
"**/helpers/**/*.py" = ["S", "NPY"]
"scripts/**/*.py" = ["S", "NPY"]
"examples/**/*.py" = ["S", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests", "excel_calculator/tests"]
