[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nwau_py"
version = "0.2.2"
description = "Utilities for calculating IHACPA National Weighted Activity Units"
authors = [{name="IHACPA"}]
readme = "nwau_py/README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
dependencies = [
    "click",
    "lightgbm",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "polars",
    "pyreadstat",
    "pyxlsb",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff",
]
test = [
    "pytest",
]
coverage = [
    "pytest-cov",
]
security = [
    "bandit",
    "pip-audit",
]
typing = [
    "ty",
    "pytest",
]
property = [
    "hypothesis",
]
mutation = [
    "mutmut",
]
profiling = [
    "scalene",
]
docs = [
    "vale",
]

[project.scripts]
funding-calculator = "nwau_py.cli.main:cli"
mchs-mcp = "nwau_py.mcp_server:main"
mchs-mcp-http = "nwau_py.mcp_http_server:main"

[tool.setuptools.packages.find]
where = [".", "excel_calculator/src"]
include = ["nwau_py*", "excel_calculator*"]
exclude = ["archive*", "build*", "dist*", "examples*", "scripts*", "tests*"]

[tool.setuptools.package-data]
nwau_py = [
    "README.md",
    "data/*.csv",
    "data/*.json",
    "docs/*.md",
    "mcp_assets/canonical/*.schema.json",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["archive/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "S", "RUF", "NPY"]
ignore = ["UP042"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "NPY"]
"**/helpers/**/*.py" = ["S", "NPY"]
"scripts/**/*.py" = ["S", "NPY"]
"examples/**/*.py" = ["S", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests", "excel_calculator/tests"]
