[package]
name = "nwau-py"
version = "0.1.0"
edition = "2021"
description = "Acute 2025 Python binding scaffold for the NWAU proof of concept"
license = "Apache-2.0"

[lib]
name = "nwau_py_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["abi3-py311"]
extension-module = ["pyo3/extension-module"]
abi3-py311 = ["pyo3/abi3-py311"]

[dependencies]
pyo3 = { version = "0.22" }
nwau-core = { path = "../nwau-core" }
